--- a/CorujaPresentation/SiteAtual/Canal Coruja Educação.html
+++ b/CorujaPresentation/SiteAtual/Canal Coruja Educação.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- saved from url=(0047)http://canal.corujaedu.com.br/acessar/index.php -->
 <html class="login-bg gt-ie8 gt-ie9 not-ie login-content" dir="ltr" lang="pt-br" xml:lang="pt-br"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta property="og:title" content="Canal Coruja Educação">
@@ -497,34 +497,7 @@
                             </div>
                         </div>
                         <!-- //ANA CAROLINA CASTRO ============================= -->
-                        <!-- ALFREDO RHEINGANTZ =============================== -->
-                        <div class="col-md-3 col-xs-6 text-center col-centered">
-                            <img src="~/Content/CorujaImages/Alfredo.png" alt="Alfredo Rheingantz" class="team-photo" width="500" height="500">
-                            <!-- Trigger the modal with a button -->
-                            <button type="button" class="btn btn-info btn-team" data-toggle="modal" data-target="#myModalAR">
-                              <p><span class="team-name">Alfredo Rheingantz</span><br>
-                                 <span class="team-position">Equipe Técnica</span></p>
-                            </button>
-                            <!-- Modal -->
-                            <div id="myModalAR" class="modal fade" role="dialog">
-                              <div class="modal-dialog">
-                                <!-- Modal content-->
-                                <div class="modal-content">
-                                  <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">×</button>
-                                    <h4 class="modal-title">Alfredo Rheingantz</h4>
-                                  </div>
-                                  <div class="modal-body">
-                                    <p>Palestrante e professor em diversas áreas da Pedagogia e Educação de Adultos. Economista pela USP, gestor no terceiro setor, pedagogo pela Emerson College – Inglaterra, com especialização em pedagogia Waldorf, para ensino fundamental e médio.</p>
-                                  </div>
-                                  <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                        </div>
-                        <!-- //ALFREDO RHEINGANTZ ============================= -->
+                       
                     </div>
                     <!-- EQUIPE 3a LINHA ======================================= -->
                     <div id="team-3rd-row" class="row row-centered">
@@ -705,7 +678,7 @@
 
                     <div class="row">
                         <div class="col-md-6 col-sm-6 copyright">
-                            <p> © 2016 Coruja Educação - Desenvolvido por <a target="_blank" href="https://codely.com.br/" class="footer">Codely Tecnologia</a>.</p>
+                            <p> © 2016 Coruja Educação </p>
                         </div>
                         <div class="col-md-6 col-sm-6 copyright">
                             <p class="text-right"> Icons made by <a href="http://www.freepik.com/" title="Freepik" class="footer">Freepik</a> from <a href="http://www.flaticon.com/" title="Flaticon" class="footer">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" class="footer">CC BY 3.0</a></p>
